# hpipe

./: .gitignore  README.md  TODO.txt  pyproject.toml  tasks.py  tox.ini
examples/: 01_basic_job.py  02_orphan_pipeline.py
examples/03_basic_project/: pipeline.py  tasks.py
examples/03_command_line/: pipeline.py
hbuild/: __init__.py  __main__.py
hpipe/: __init__.py  __main__.py  errors.py  pipeline.py  requires.py
hpipe/internal/: __init__.py
hpipe/tools/hbuild/: __init__.py
htask/: __init__.py  __main__.py  parser.py  task.py
htask/progs/: cmake.py  msvc.py  nasm.py
